--- a/contact.html
+++ b/contact.html
@@ -299,7 +299,7 @@
                 <p>
                     This website uses cookies to provide you with a better and
                     more relevant browsing experience.
-                    <a href="#">Learn more...</a>
+                    <a href="terms-of-use.html">Learn more...</a>
                 </p>
             </div>
 
