--- a/prices.html
+++ b/prices.html
@@ -166,7 +166,7 @@
                             <div
                                 class="blog-content border border-top-0 rounded-bottom p-4"
                             >
-                                <p style="color: #e94b3cff">$ 150</p>
+                                <p style="color: #e94b3cff">£ 150</p>
                                 <a href="#" class="h4"> Basic Package</a>
                                 <p class="my-3">
                                     Our Basic Package provides the essential
@@ -193,7 +193,7 @@
                             <div
                                 class="blog-content border border-top-0 rounded-bottom p-4"
                             >
-                                <p style="color: #e94b3cff">$ 250</p>
+                                <p style="color: #e94b3cff">£ 250</p>
                                 <a href="#" class="h4"> Complete Package</a>
                                 <p class="my-3">
                                     The Complete Package covers all aspects of
@@ -219,7 +219,7 @@
                             <div
                                 class="blog-content border border-top-0 rounded-bottom p-4"
                             >
-                                <p style="color: #e94b3cff">$ 200</p>
+                                <p style="color: #e94b3cff">£ 200</p>
                                 <a href="#" class="h4">Intimate Wedding</a>
                                 <p class="my-3">
                                     For couples planning a small, intimate
@@ -246,7 +246,7 @@
                             <div
                                 class="blog-content border border-top-0 rounded-bottom p-4"
                             >
-                                <p style="color: #e94b3cff">$ 120</p>
+                                <p style="color: #e94b3cff">£ 120</p>
                                 <a href="#" class="h4"
                                     >Destination Wedding Package</a
                                 >
@@ -274,7 +274,7 @@
                             <div
                                 class="blog-content border border-top-0 rounded-bottom p-4"
                             >
-                                <p style="color: #e94b3cff">$ 300</p>
+                                <p style="color: #e94b3cff">£ 300</p>
                                 <a href="#" class="h4">
                                     Early Booking Discounts</a
                                 >
@@ -302,7 +302,7 @@
                             <div
                                 class="blog-content border border-top-0 rounded-bottom p-4"
                             >
-                                <p style="color: #e94b3cff">$ 500</p>
+                                <p style="color: #e94b3cff">£ 500</p>
                                 <a href="#" class="h4"> Seasonal Offers</a>
                                 <p class="my-3">
                                     We offer seasonal offers and special
